--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
   ],
   "license": "ISC",
   "author": "Abhinav",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
+  },
+  "dependencies": {
+    "prettier": "^3.7.1"
   }
 }
